# docs/swagger.yaml
@@ -10,6 +10,8 @@ definitions:
         type: string
       id:
         type: string
+      name:
+        type: string
       place_id:
         type: string
       start_time:
@@ -106,6 +108,8 @@ definitions:
     properties:
       end_time:
         type: string
+      name:
+        type: string
       place_id:
         type: string
       start_time:
@@ -163,12 +167,12 @@ definitions:
         type: string
       id:
         type: string
+      name:
+        type: string
       start_time:
         type: string
     required:
-    - end_time
     - id
-    - start_time
     type: object
   handler.UpdateTripRequest:
     properties:
